--- a/components/CodeBlocks/LiveCode.module.css
+++ b/components/CodeBlocks/LiveCode.module.css
@@ -11,10 +11,6 @@
   @apply border-l border-r border-b;
 }
 
-.preview {
-  @apply bg-white;
-}
-
 .error {
   @apply w-full;
   @apply bg-red-100 text-red-700;
